--- a/pika.css
+++ b/pika.css
@@ -1,3 +1,14 @@
 #pika {
 	width: 100%;
 }
+#myDIV {
+    height: 20000px;
+    width: 1000px;
+    overflow: auto;
+}
+
+#content {
+    height: 800px;
+    width: 2000px;
+    background-color: coral;
+}
